fixed text overflow in chrome

--- a/programmi/css/ubuntu.css
+++ b/programmi/css/ubuntu.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4 {
   font-family: 'Ubuntu';
   font-weight: 300;
   letter-spacing: -0.05em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
 }
 h1 { font-size: 4.5em; }
 h2 { font-size: 2em; }
